@@ -34,3 +34,4 @@ public_fonts = matrix.afm matrix.pfa
 afmdir = $(pkgdatadir)/afm
 dist_afm_DATA = font.map $(default_afm) $(public_fonts)
 
+EXTRA_DIST = ChangeLog.old
