@@ -36,7 +36,8 @@ libcompat_a_SOURCES_windelta =	\
 
 noinst_HEADERS = getopt.h regex.h xalloc.h
 
-EXTRA_DIST = strerror.c memmove.c memcpy.c strtol.c strtoul.c
+EXTRA_DIST = ChangeLog.old strerror.c memmove.c memcpy.c strtol.c	\
+	strtoul.c
 
 INCLUDES = -I$(srcdir)/../intl -I../intl
 
