@@ -56,4 +56,4 @@ INCLUDES_windelta = \
 	+-DLIBRARY=\"c:\\enscript\"		\
 	+-DSYSCONFDIR=\"c:\\enscript\"
 
-EXTRA_DIST = prt_dos.c ansi2knr.c ansi2knr.1
+EXTRA_DIST = ChangeLog.old prt_dos.c ansi2knr.c ansi2knr.1
